objects/CMPL123CME__Vigilance__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123CME__Accessories_or_Associated_Device__c</fullName>
        <label>Accessories or Associated Device</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Age_of_patient__c</fullName>
        <label>Age of patient</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Age_units__c</fullName>
        <label>Age units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Years</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Authorized_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorized Representative</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Vigilance1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Aware_Date__c</fullName>
        <label>Aware Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Classification_of_Incident__c</fullName>
        <label>Classification of Incident</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Death</fullName>
                </value>
                <value>
                    <fullName>Unanticipated Serious Deterioration in State of Health</fullName>
                </value>
                <value>
                    <fullName>All other reportable incidents</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Commercial_name__c</fullName>
        <label>Commercial name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Date_of_Incident__c</fullName>
        <label>Date of Incident</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Device_Class__c</fullName>
        <label>Device Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AIMD Active implants</fullName>
                </value>
                <value>
                    <fullName>MDD Class III</fullName>
                </value>
                <value>
                    <fullName>MDD Class IIb</fullName>
                </value>
                <value>
                    <fullName>MDD Class IIa</fullName>
                </value>
                <value>
                    <fullName>MDD Class I</fullName>
                </value>
                <value>
                    <fullName>IVD Annex II List A</fullName>
                </value>
                <value>
                    <fullName>IVD Annex II List B</fullName>
                </value>
                <value>
                    <fullName>IVD Devices for self-testing</fullName>
                </value>
                <value>
                    <fullName>IVD General</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Device_Current_Location__c</fullName>
        <label>Device Current Location</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device</label>
        <referenceTo>CMPL123__Device__c</referenceTo>
        <relationshipName>Vigilance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Device_analysis_results__c</fullName>
        <label>Device analysis results</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Duration_of_Impantation__c</fullName>
        <label>Duration of Impantation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Expected_date_of_next_report__c</fullName>
        <label>Expected date of next report</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Explant_Date__c</fullName>
        <label>Explant Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Final_comments__c</fullName>
        <label>Final comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Healthcare_facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Healthcare facility</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Vigilance2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Implant_Date__c</fullName>
        <label>Implant Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Incident_Description__c</fullName>
        <label>Incident Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Initial_corrective_actions__c</fullName>
        <label>Initial corrective actions</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Manufacturer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Vigilance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__No_of_Patients_Involved__c</fullName>
        <label>No of Patients Involved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Nomeclature__c</fullName>
        <label>Nomeclature System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GMDN</fullName>
                </value>
                <value>
                    <fullName>UMDNS (ECRI)</fullName>
                </value>
                <value>
                    <fullName>EDMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Nomeclature_code__c</fullName>
        <label>Nomeclature code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Nomeclature_text__c</fullName>
        <label>Nomeclature text</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Notified_Body_ID_Number__c</fullName>
        <label>Notified Body ID Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Number_of_Medical_Devices_Involved__c</fullName>
        <label>Number of Medical Devices Involved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Number_of_Similar_Incidents__c</fullName>
        <label>Number of Similar Incidents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Healthcare Professional</fullName>
                </value>
                <value>
                    <fullName>Patient</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Other_Competent_Authority__c</fullName>
        <label>Other Competent Authority</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Patient_Outcome__c</fullName>
        <label>Patient Outcome</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Preliminary_Analysis__c</fullName>
        <label>Preliminary Analysis</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Public_Health_Threat__c</fullName>
        <label>Public Health Threat</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Remedial_actions_taken__c</fullName>
        <label>Remedial actions taken</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Similar_Incidents__c</fullName>
        <label>Similar Incidents</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Status_of_Submitter_Others__c</fullName>
        <label>Status of Submitter Others</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Status_of_Submitter__c</fullName>
        <label>Status of Submitter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Authorised Representative within EEA and Switzerland</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Type_of_Report__c</fullName>
        <label>Type of Report</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Report</fullName>
                </value>
                <value>
                    <fullName>Follow-up report</fullName>
                </value>
                <value>
                    <fullName>Combined initial and final report</fullName>
                </value>
                <value>
                    <fullName>Final report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Usage_of_the_medical_device__c</fullName>
        <label>Usage of the medical device</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial use</fullName>
                </value>
                <value>
                    <fullName>Reuse of a single use medical device</fullName>
                </value>
                <value>
                    <fullName>reuse of a reusable medical device</fullName>
                </value>
                <value>
                    <fullName>re-serviced/refurbished</fullName>
                </value>
                <value>
                    <fullName>other</fullName>
                </value>
                <value>
                    <fullName>problem noted prior use</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__User_Facility_Report_Ref_No__c</fullName>
        <label>User Facility Report Ref No</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Weight_in_Kgs__c</fullName>
        <label>Weight in Kgs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Vigilance - Obsolete</label>
    <nameField>
        <displayFormat>V-{0000000}</displayFormat>
        <label>Vigilance No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vigilances - Obsolete</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>CMPL123CME__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>